# S.T.A.R---System-Threat---Anomaly-Radar

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  srs.txt
src/core/: CMakeLists.txt
src/core/detection/: hook_scan.c  memory_scan.c  star_detection.c
src/core/event/: star_event.c
src/core/include/: star_detection.h  star_event.h  star_platform.h  star_types.h
src/core/platform/: platform_common.c
src/core/platform/linux/: platform_linux.c
src/core/platform/windows/: platform_win.c
src/daemon/: CMakeLists.txt  daemon_core.c  daemon_core.h  ipc.c  ipc.h  main.c  service.c  service.h
src/drivers/windows/: star_driver.c  star_driver.h
src/ui/: package.json  tsconfig.json  vite.config.js
src/ui/electron/: main.js  preload.js
src/ui/react/: App.jsx  index.html  styles.css
